Tweak layout to include picture

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <p><img src="/assets/images/SteveSimpson.png" alt="Steve Simpson wearing a black cowboy hat outside" style="border:0px" /></p>
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
