--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,27 +16,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <p><img src="/assets/images/SteveSimpson.png" alt="Steve Simpson wearing a black cowboy hat outside" style="border:0px" /></p>
+        <p><img height="144" width="144" src="/assets/images/SteveSimpson.png" alt="Steve Simpson wearing a black cowboy hat outside" style="border:0px" /></p>
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
-          {% endif %}
-          <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
+          <li><a class="buttons in" href="https://www.linkedin.com/in/steve-simpson-red/">Linked in Profile</a></li>
         </ul>
 
-        {% if site.github.is_project_page %}
-          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-          <ul>
-            <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
-          </ul>
-        {% endif %}
+        <ul>
+          <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+        </ul>
       </header>
 
       <section>
@@ -44,7 +34,7 @@
       </section>
 
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>&#169; 2025 Steven Simpson</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
